“edit-transport-menu-details”

--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,7 @@ html, body {
 .transport-item p.transport-subtext{
     font-size: 1em !important; /* 16px */
     font-weight: 400 !important; /* regular */
-    color: #6A8995 !important;
+    color: #ED1169 !important;
     font-style: normal !important;
     margin-left: 0 !important;
     margin-bottom: 8px !important;
